# safe-deploy

./: .gitignore  README.md  pyproject.toml  safe-deploy.yaml
docs/: README.md  architecture.md  cli-reference.md  configuration.md  faq.md  getting-started.md  how-it-works.md  installation.md  overview.md  troubleshooting.md  tui-guide.md
safe_deploy/: __main__.py  cli.py  config.py  deploy.py  state.py  tui.py
